# Grail

./: .gitignore  CMakeLists.txt  DEVELOPMENT_BRANCH  README  classes  clean_cmake  gr  lines_of_code  loc.sh  lua_utils_impl.cc  planning.txt  valgrind.suppressions  xcflayers
cmake/Modules/: FindSDL_gfx.cmake
demo/: .init.lua.swp  event.lua  guy.lua  init.lua  main_character.lua  scene1.lua  user_interface.lua
demo/media/: test.scene
demo/media/800x600/: luise.xcf
demo/sounds/: 20moment.txt
doc/: dependencies.txt  features.txt  generate_clsgraph.py  libgrail.cls
lib/: CMakeLists.txt  action.h  action_text.cc  action_text.h  actor.cc  actor.h  animation.cc  animation.h  area.cc  area.h  audio.cc  audio.h  blit_cached.cc  blit_cached.h  box.h  button.h  classes.h  debug.cc  debug.h  dialog_frontend.cc  dialog_frontend.h  dialog_frontend_default.cc  dialog_frontend_default.h  dialog_frontend_speech_bubbles.cc  dialog_frontend_speech_bubbles.h  dialog_frontend_subtitle.cc  dialog_frontend_subtitle.h  dialog_frontend_subtitles.cc  dialog_frontend_subtitles.h  dialog_frontend_text.cc  dialog_frontend_text.h  dialog_line.cc  dialog_line.h  event.cc  event.h  exceptions.h  font.cc  font.h  game.cc  game.h  (+62 more)
minedt/: editor_component.lua  minedt.lua
runtime/: CMakeLists.txt  handcrafted_wrappers.cc  interpreter.cc  interpreter.h  lua_bindings.cc  lua_bindings.h  lua_button.h  lua_chunk.cc  lua_chunk.h  lua_converter.h  lua_exception.h  lua_game.cc  lua_game.h  lua_user_interface.h  lua_utils.cc  lua_utils.h  lua_utils_impl.cc  lua_value.h  main.cc  network_interface.cc  network_interface.h  reference_counting_lua.cc  reference_counting_lua.h  to_lua_table.cc  to_lua_table.h  wrapc.cc  wrappers.def  wrappings.cc  wrappings.h
runtime/editor_prelude/: constants.lua  gui.xrc  gui_task.lua  packages.lua  prelude.lua
runtime/prelude/: .prelude.lua.swp  constants.lua  debug.lua  packages.lua  prelude.lua
